--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.30.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
